[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=77.0"]

[project]
name = "qrlipsync"
description = "QrLipsync is an audio-video latency (also referred to as lipsync) measurement and validation tool."
version = "1.0"
authors = [{name = "UbiCast"}]
license = "GPL-3.0-only"
license-files = ["LICENSE"]
readme = "README.md"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Utilities",
]
requires-python = ">=3.11"
dependencies = [
  "numpy",
]

[project.optional-dependencies]
dev = [
  "flake8",
  "pytest",
  "pytest-cov",
]

[project.urls]
Repository = "https://github.com/UbiCastTeam/qr-lipsync"

[tool.setuptools]
packages = ["qrlipsync"]
script-files = [
  "bin/qr-lipsync-analyze.py",
  "bin/qr-lipsync-detect.py",
  "bin/qr-lipsync-generate.py",
]
include-package-data = false

[tool.pytest.ini_options]
addopts = "--verbose --tb=native --color=yes"
log_date_format = "%H:%M:%S"
log_format = "%(asctime)s.%(msecs)03d %(name)s %(levelname)s %(message)s"
log_level = "DEBUG"
testpaths = "tests/"

[tool.coverage.run]
source_dirs = ["qrlipsync"]
