[metadata]
name = qrlipsync
version = attr: qrlipsync.__version__
description = QrLipsync is an audio-video latency (also referred to as lipsync) measurement and validation tool
long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/UbiCastTeam/qr-lipsync
author = UbiCast Team
author-email = dev@ubicast.eu

license = GPLv3
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = True
python_requires = >3.5, <3.9
packages =
    qrlipsync
scripts =
    bin/qr-lipsync-analyze.py
    bin/qr-lipsync-detect.py
    bin/qr-lipsync-generate.py
setup_requires =
    setuptools >= 30.3.0

[options.extras_require]
testing =
    flake8==3.7.9
    pytest==5.3.5
    pytest-cov==2.8.1

[flake8]
ignore =
    E501  # line length limitation
    E265  # block comment should start with '# ' (makes it easier to enable/disable code)
    W503  # line break before binary operator (deprecated rule)
    W505  # doc line too long
exclude = .git/,.virtualenv/,__pycache__/,build/,dist/

[tool:pytest]
addopts = --verbose --tb=short --color=yes --cov=qrlipsync --cov-report=term-missing
testpaths = tests/

[tool:coverage]
precision = 2
